# mapbox-demo

./: .env  .firebaserc  .gitignore  package-lock.json  package.json  pyproject.toml
docs/: backendlogig.md  whatWeDo.md
functions/: package-lock.json
src/: app.module.ts
src/mapbox/: mapbox.controller.ts  mapbox.module.ts  mapbox.service.ts
src/model/: schedule.ts  scheduleGroup.ts
