[tool.poetry]
name = "mapbox-demo"
version = "0.1.0"
description = ""
authors = ["Luca Knaack <l.knaack93@gmail.com>"]
readme = "README.md"
packages = [{include = "mapbox_demo"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
